# backyfull

./: .gitignore
.github/workflows/: ci.yml
backy_x/: CMakeLists.txt  README.md  theme.qss
backy_x/assets/style/: backyfull.qss
backy_x/include/cloud/gcs/: GcsAuth.h
backy_x/include/core/: BackupConfig.h  IStorageTarget.h  Job.h  Scheduler.h
backy_x/include/targets/: GcsTarget.h  LocalTarget.h  SftpTarget.h
backy_x/include/util/: CredentialManager.h  IconUtils.h
backy_x/resources/: backy_resources.qrc  theme.qss
backy_x/src/cli/: main_cli.cpp
backy_x/src/cloud/gcs/: GcsAuth.cpp  GcsAuth.h
backy_x/src/core/: BackupConfig.cpp  Job.cpp  Scheduler.cpp
backy_x/src/gui/: CustomTableWidgetItems.h  DestinationPage.cpp  DestinationPage.h  DestinationPage.ui  DestinationStack.cpp  DestinationStack.h  FileViewerWidget.cpp  FileViewerWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowViewModel.cpp  MainWindowViewModel.h  WatchManager.cpp  WatchManager.h  main_gui.cpp
backy_x/src/targets/: GcsTarget.cpp  LocalTarget.cpp  SftpTarget.cpp
backy_x/src/util/: CredentialManager.cpp  CredentialManager_linux.cpp  CredentialManager_mac.mm  CredentialManager_win.cpp
backy_x/tests/: test_local_target.cpp  test_scheduler.cpp  test_sftp_target.cpp
